--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
-<!doctype html>Hello
-<html>Ww
-	<head>
-		<title>TITLE</title>
-
-	<head>
-	<body>
-		My name is WenQian
-	<body>
-
-</html>
+<h1>WENQIAN ZHAO</h1>
+<p>	As you can see, my name is WenQian Zhao.
+</p>
+<ul>
+	<li>sleep</li>
+	<li>eat</li>
+</ul>
