--- a/index.html
+++ b/index.html
@@ -1,21 +1,10 @@
-<<<<<<< HEAD
-<h1>WENQIAN ZHAO</h1>
-<p>	As you can see, my name is WenQian Zhao.
+
+<h1></h1>
+<p>	Hello, my name is WenQian Zhao. This is my first year in University at Buffalo. My major is computer science, and it's an awesome major! Coding is really fun! 
+
 </p>
 <ul>
 	<li>sleep</li>
 	<li>eat</li>
 </ul>
-=======
-<!doctype html>Hello
-<html>Ww
-	<head>
-		<title>TITLE</title>
 
-	<head>
-	<body>
-		My name is WenQian
-	<body>
-
-		</html>
->>>>>>> 296f8f240f1ef893661f6e3b8c618e07e42e4f35
