--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>ALL ABOUT Me</title>
+	</head>
+	<body>
 
-<h1></h1>
-<p>	Hello, my name is WenQian Zhao. This is my first year in University at Buffalo. My major is computer science, and it's an awesome major! Coding is really fun! 
+		<h1>Introduction</h1>
+		<p>This is a paragraph.</p>
 
-</p>
-<ul>
-	<li>sleep</li>
-	<li>eat</li>
-</ul>
+	</body>
+</html>
 
