--- a/index.html
+++ b/index.html
@@ -1,13 +1,68 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>ALL ABOUT Me</title>
-	</head>
-	<body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Bootstrap 101 Template</title>
 
-		<h1>Introduction</h1>
-		<p>This is a paragraph.</p>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-	</body>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    body {
+        background-color: rgb(235,245,251);
+    }
+    h1 {
+        color: rgb(21,7,96);
+        text-align: center;
+    }
+    h2 {
+        color: rgb(33,97,140);
+        text-align: center;
+        font-family: verdana;
+        font-size: 20px;
+    }
+    details {
+        display: block;
+        color: rgb(33,97,140);
+        text-align: center;
+        font-family: verdana;
+    }
+    p {
+        color: rgb(33,97,140);
+        text-align: center;
+        font-family: verdana;
+        font-size: 18px;
+    }
+    li {
+        color: rgb(33,97,140);
+        text-align: center;
+        font-family: verdana;
+        font-size: 18px;
+    }
+  </style>
+</head>
+<body>
+  <h1>My FIRST Website!!</h1>
+  <h2>Name:</h2>
+  <p>WenQian Zhao</p>
+  <h2>My Favorite Activities:</h2>
+  <li> Eat</li>  <li> Sleep</li>  <li> Coding</li><details>Coding is Life</detail>
+
+
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  </body>
 </html>
-
