--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <style>
     body {
         background-color: rgb(235,245,251);
     }
