--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  
+
   </head>
   <style>
     body {
@@ -39,6 +39,7 @@
 </head>
 <body>
   <h1>My FIRST Website!!</h1>
+  <img src= "https://d13yacurqjgara.cloudfront.net/users/11380/screenshots/2552751/deer.png"/>
   <h2>Name:</h2>
   <p>WenQian Zhao</p>
   <h2>My Favorite Activities:</h2>
