--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<script src="https://use.fontawesome.com/4e55fe0ee8.js"></script>
   <head>
-
   </head>
   <style>
     body {
@@ -9,13 +9,12 @@
     }
     h1 {
         color: rgb(21,7,96);
-        text-align: center;
+        
     }
     h2 {
         color: rgb(33,97,140);
-        text-align: center;
-        font-family: verdana;
-        font-size: 20px;
+        font-family: Arial;
+        font-size: 28px;
     }
     details {
         display: block;
@@ -25,9 +24,7 @@
     }
     p {
         color: rgb(33,97,140);
-        text-align: center;
         font-family: verdana;
-        font-size: 18px;
     }
     li {
         color: rgb(33,97,140);
@@ -35,14 +32,31 @@
         font-family: verdana;
         font-size: 18px;
     }
+    div.absolute {
+    position: absolute;
+    top: 10px;
+    right: 50;
+    width: 300px;
+    height: 100px;
+}
+  .fa-cog {
+  color: black;
+}
   </style>
 </head>
 <body>
-  <img src= "https://d13yacurqjgara.cloudfront.net/users/11380/screenshots/2552751/deer.png"/>
-  <h2>Name:</h2>
-  <p>WenQian Zhao</p>
-  <h2>My Favorite Activities:</h2>
-  <li> Eat</li>  <li> Sleep</li>  <li> Coding</li><details>Coding is Life</detail>
+ <div class="absolute"> <img src=" http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/r22U07d7gqbJZ5PlowSVfQT1kkDL0sG1PSvIvHV8mYo!/b/dOQAAAAAAAAA&ek=1&kp=1&pt=0&bo=vQO.A70DvgMDByI!&tm=1481652000&sce=60-2-2&rf=viewer_4"style="width:70%;">
+
+   &nbsp;<h2> WenQian Zhao</h2>
+  &nbsp; <a href="https://www.facebook.com/Wenqianzhao"><i class="fa fa-facebook-official" style="color: rgb(33,97,140); font-size: 20px;" ></i></a> •
+  <a href="mailto:wenqianz98@gmail.com?Subject=Hello"><i class="fa fa-envelope" style="color: rgb(33,97,140); font-size: 20px;"></i></a> •
+   <a href="https://github.com/wenqianz"><i class="fa fa-github" style="color: rgb(33,97,140); font-size: 20px;"></i></a> •
+   <a href="https://www.instagram.com/wenqian_8/"><i class="fa fa-instagram" style="color: rgb(33,97,140); font-size: 20px;"></i></a> •
+   <a href="https://www.snapchat.com/add/wenqianz"><i class="fa fa-snapchat" style="color: rgb(33,97,140); font-size: 20px;"></i></a> •
+   <a href="weixin://dl/chat?{wenqianz3407}"><i class="fa fa-wechat" style="color: rgb(33,97,140); font-size: 20px;"></i></a> 
+   </div>
+  
+  
 
   </body>
 </html>
