--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
     }
     h1 {
         color: rgb(21,7,96);
-        
     }
     h2 {
         color: rgb(33,97,140);
         font-family: Arial;
-        font-size: 28px;
+        font-size: 34px;
     }
     details {
         display: block;
@@ -34,8 +33,8 @@
     }
     div.absolute {
     position: absolute;
-    top: 10px;
-    right: 50;
+    top: 40px;
+    left: 40px;
     width: 300px;
     height: 100px;
 }
@@ -45,15 +44,15 @@
   </style>
 </head>
 <body>
- <div class="absolute"> <img src=" http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/r22U07d7gqbJZ5PlowSVfQT1kkDL0sG1PSvIvHV8mYo!/b/dOQAAAAAAAAA&ek=1&kp=1&pt=0&bo=vQO.A70DvgMDByI!&tm=1481652000&sce=60-2-2&rf=viewer_4"style="width:70%;">
+ <div class="absolute"> <img src=" http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/r22U07d7gqbJZ5PlowSVfQT1kkDL0sG1PSvIvHV8mYo!/b/dOQAAAAAAAAA&ek=1&kp=1&pt=0&bo=vQO.A70DvgMDByI!&tm=1481652000&sce=60-2-2&rf=viewer_4"style="width:80%;">
 
-   &nbsp;<h2> WenQian Zhao</h2>
-  &nbsp; <a href="https://www.facebook.com/Wenqianzhao"><i class="fa fa-facebook-official" style="color: rgb(33,97,140); font-size: 20px;" ></i></a> •
-  <a href="mailto:wenqianz98@gmail.com?Subject=Hello"><i class="fa fa-envelope" style="color: rgb(33,97,140); font-size: 20px;"></i></a> •
-   <a href="https://github.com/wenqianz"><i class="fa fa-github" style="color: rgb(33,97,140); font-size: 20px;"></i></a> •
-   <a href="https://www.instagram.com/wenqian_8/"><i class="fa fa-instagram" style="color: rgb(33,97,140); font-size: 20px;"></i></a> •
-   <a href="https://www.snapchat.com/add/wenqianz"><i class="fa fa-snapchat" style="color: rgb(33,97,140); font-size: 20px;"></i></a> •
-   <a href="weixin://dl/chat?{wenqianz3407}"><i class="fa fa-wechat" style="color: rgb(33,97,140); font-size: 20px;"></i></a> 
+  <h2> WenQian Zhao</h2>
+  &nbsp; <a href="https://www.facebook.com/Wenqianzhao"><i class="fa fa-facebook-official" style="color: rgb(33,97,140); font-size: 30px;" ></i></a> •
+  <a href="mailto:wenqianz98@gmail.com?Subject=Hello"><i class="fa fa-envelope" style="color: rgb(33,97,140); font-size:30px;"></i></a> •
+   <a href="https://github.com/wenqianz"><i class="fa fa-github" style="color: rgb(33,97,140); font-size: 30px;"></i></a> •
+   <a href="https://www.instagram.com/wenqian_8/"><i class="fa fa-instagram" style="color: rgb(33,97,140); font-size: 30px;"></i></a> •
+   <a href="https://www.snapchat.com/add/wenqianz"><i class="fa fa-snapchat" style="color: rgb(33,97,140); font-size: 30px;"></i></a> •
+   <a href="weixin://dl/chat?{wenqianz3407}"><i class="fa fa-wechat" style="color: rgb(33,97,140); font-size: 30px;"></i></a> 
    </div>
   
   
