--- a/index.html
+++ b/index.html
@@ -8,28 +8,18 @@
         background-color: rgb(235,245,251);
     }
     h1 {
-        color: rgb(21,7,96);
-    }
-    h2 {
         color: rgb(33,97,140);
-        font-family: Arial;
-        font-size: 34px;
+        font-family: sans-serif;
+        font-size: 40px;
     }
-    details {
-        display: block;
-        color: rgb(33,97,140);
-        text-align: center;
-        font-family: verdana;
-    }
+    b { color: rgb(21,7,96);
+        font-family: sans-serif;
+        font-size:24px;
+        }
     p {
-        color: rgb(33,97,140);
-        font-family: verdana;
-    }
-    li {
-        color: rgb(33,97,140);
-        text-align: center;
-        font-family: verdana;
-        font-size: 18px;
+        color: rgb(21,7,96);
+        font-family: sans-serif;
+        font-size:20px;
     }
     div.absolute {
     position: absolute;
@@ -45,8 +35,7 @@
 </head>
 <body>
  <div class="absolute"> <img src=" http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/r22U07d7gqbJZ5PlowSVfQT1kkDL0sG1PSvIvHV8mYo!/b/dOQAAAAAAAAA&ek=1&kp=1&pt=0&bo=vQO.A70DvgMDByI!&tm=1481652000&sce=60-2-2&rf=viewer_4"style="width:80%;">
-
-  <h2> WenQian Zhao</h2>
+  <h1> Wenqian Zhao</h1>
   &nbsp; <a href="https://www.facebook.com/Wenqianzhao"><i class="fa fa-facebook-official" style="color: rgb(33,97,140); font-size: 30px;" ></i></a> •
   <a href="mailto:wenqianz98@gmail.com?Subject=Hello"><i class="fa fa-envelope" style="color: rgb(33,97,140); font-size:30px;"></i></a> •
    <a href="https://github.com/wenqianz"><i class="fa fa-github" style="color: rgb(33,97,140); font-size: 30px;"></i></a> •
@@ -54,6 +43,22 @@
    <a href="https://www.snapchat.com/add/wenqianz"><i class="fa fa-snapchat" style="color: rgb(33,97,140); font-size: 30px;"></i></a> •
    <a href="weixin://dl/chat?{wenqianz3407}"><i class="fa fa-wechat" style="color: rgb(33,97,140); font-size: 30px;"></i></a> 
    </div>
+   
+   <div class="main" style="margin-left:400px; margin-top:250px; width:1000px">
+   
+   <div class="relative" style = "width:500px;background:#fff;"><img src ="https://scontent.xx.fbcdn.net/v/t31.0-8/15326030_1839770772929909_1467490782335912770_o.jpg?oh=3e6c2c1216005c00b186a4bba0dad300&oe=58F0C88A" style="width:500px"> 
+   <p><b> &nbsp; December 9, 2016 - Baptism </b>
+   <p><b>&nbsp; Location: </b>Amherst Baptist Church</p>
+        <p style="padding-left:1em">A new beginning!!</p></div>
+         
+   <div class="relative" style = "width:500px;background:#fff;"><img src ="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/14322589_307861459578526_1226600109812777511_n.jpg?oh=26eab155e454e5805c4472025e8e1680&oe=58FB9D2F" style="width:500px"> 
+   <p><b> &nbsp; September 9 - 11, 2016 - Camping </b>
+   <p><b>&nbsp; Location: </b>Christian Lighthouse Camp</p>
+        <p style="padding-left:1em">A new beginning!!</p></div>
+   
+   </div>
+   
+    
   
   
 
