--- a/index.html
+++ b/index.html
@@ -14,53 +14,94 @@
     }
     b { color: rgb(21,7,96);
         font-family: sans-serif;
-        font-size:24px;
+        font-size:30px;
         }
     p {
         color: rgb(21,7,96);
         font-family: sans-serif;
-        font-size:20px;
+        font-size:28px;
     }
+    p2 {
+        color: rgb(21,7,96);
+        font-family: sans-serif;
+        font-size:40px;
+    }
+    p1 {
+      color: rgb(33,97,140);
+        font-family: sans-serif;
+        font-size:50px;
+        }
     div.absolute {
     position: absolute;
     top: 40px;
     left: 40px;
-    width: 300px;
+    width: 330px;
     height: 100px;
-}
-  .fa-cog {
-  color: black;
 }
   </style>
 </head>
 <body>
  <div class="absolute"> <img src=" http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/r22U07d7gqbJZ5PlowSVfQT1kkDL0sG1PSvIvHV8mYo!/b/dOQAAAAAAAAA&ek=1&kp=1&pt=0&bo=vQO.A70DvgMDByI!&tm=1481652000&sce=60-2-2&rf=viewer_4"style="width:80%;">
-  <h1> Wenqian Zhao</h1>
-  &nbsp; <a href="https://www.facebook.com/Wenqianzhao"><i class="fa fa-facebook-official" style="color: rgb(33,97,140); font-size: 30px;" ></i></a> •
-  <a href="mailto:wenqianz98@gmail.com?Subject=Hello"><i class="fa fa-envelope" style="color: rgb(33,97,140); font-size:30px;"></i></a> •
-   <a href="https://github.com/wenqianz"><i class="fa fa-github" style="color: rgb(33,97,140); font-size: 30px;"></i></a> •
-   <a href="https://www.instagram.com/wenqian_8/"><i class="fa fa-instagram" style="color: rgb(33,97,140); font-size: 30px;"></i></a> •
-   <a href="https://www.snapchat.com/add/wenqianz"><i class="fa fa-snapchat" style="color: rgb(33,97,140); font-size: 30px;"></i></a> •
-   <a href="weixin://dl/chat?{wenqianz3407}"><i class="fa fa-wechat" style="color: rgb(33,97,140); font-size: 30px;"></i></a> 
+  <p1> Wenqian Zhao</p1>
+  <p1 style="padding-left:0.5em">
+   <a href="https://www.facebook.com/Wenqianzhao"><i class="fa fa-facebook-official" style="color: rgb(33,97,140); font-size: 30px;" ></i></a> 
+  <a href="mailto:wenqianz98@gmail.com?Subject=Hello"><i class="fa fa-envelope" style="color: rgb(33,97,140); font-size:30px;"></i></a> 
+   <a href="https://github.com/wenqianz"><i class="fa fa-github" style="color: rgb(33,97,140); font-size: 30px;"></i></a> 
+   <a href="https://www.instagram.com/wenqian_8/"><i class="fa fa-instagram" style="color: rgb(33,97,140); font-size: 30px;"></i></a> 
+   <a href="https://www.snapchat.com/add/wenqianz"><i class="fa fa-snapchat" style="color: rgb(33,97,140); font-size: 30px;"></i></a> 
+   <a href="weixin://dl/chat?{wenqianz3407}"><i class="fa fa-wechat" style="color: rgb(33,97,140); font-size: 30px;"></i></a> </p1>
+   <p> &nbsp; </p>
+   <p><b style="font-size: 60;"> About me: </b></p>
+   <p style = "color: rgb(33,97,140); font-size:30;">Birthday: 
+   <p style="padding-left:1em"> July 6, 1998</p></p>
+   <p style = "color: rgb(33,97,140); font-size:30;">Zodiac: 
+   <p style="padding-left:1em"> Cancer</p>
+   <p style = "color: rgb(33,97,140); font-size:30;">College: 
+   <p style="padding-left:1em"> University At Buffalo</p>
+   <p style = "color: rgb(33,97,140); font-size:30;">Courses taking: 
+   <p style="padding-left:1em"> CSE115</p>
+   <p style="padding-left:1em"> CSE199</p>
+   <p style="padding-left:1em"> ARC121</p>
+   <p style="padding-left:1em"> MTH241</p></p>
    </div>
    
-   <div class="main" style="margin-left:400px; margin-top:250px; width:1000px">
+   <div class="main" style="margin-left:390px; margin-top:200px; width:800px">
    
-   <div class="relative" style = "width:500px;background:#fff;"><img src ="https://scontent.xx.fbcdn.net/v/t31.0-8/15326030_1839770772929909_1467490782335912770_o.jpg?oh=3e6c2c1216005c00b186a4bba0dad300&oe=58F0C88A" style="width:500px"> 
+   <div class="relative" style = "width:500px;background:#fff;height:550px;"><img src ="https://scontent.xx.fbcdn.net/v/t31.0-8/15326030_1839770772929909_1467490782335912770_o.jpg?oh=3e6c2c1216005c00b186a4bba0dad300&oe=58F0C88A" style="width:500px"> 
    <p><b> &nbsp; December 9, 2016 - Baptism </b>
-   <p><b>&nbsp; Location: </b>Amherst Baptist Church</p>
+   <p><b> &nbsp; Location: </b>Amherst Baptist Church</p>
         <p style="padding-left:1em">A new beginning!!</p></div>
          
-   <div class="relative" style = "width:500px;background:#fff;"><img src ="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/14322589_307861459578526_1226600109812777511_n.jpg?oh=26eab155e454e5805c4472025e8e1680&oe=58FB9D2F" style="width:500px"> 
+   <div class="relative" style = "width:500px;background:#fff; height:500px; margin-top:80px"><img src ="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/14322589_307861459578526_1226600109812777511_n.jpg?oh=26eab155e454e5805c4472025e8e1680&oe=58FB9D2F" style="width:500px"> 
    <p><b> &nbsp; September 9 - 11, 2016 - Camping </b>
-   <p><b>&nbsp; Location: </b>Christian Lighthouse Camp</p>
+   <p><b> &nbsp; Location: </b>Christian Lighthouse Camp</p>
         <p style="padding-left:1em">A new beginning!!</p></div>
    
    </div>
    
     
   
-  
+  <script>
+var slideIndex = 0;
+showSlides();
+
+function showSlides() {
+    var i;
+    var slides = document.getElementsByClassName("mySlides");
+    var dots = document.getElementsByClassName("dot");
+    for (i = 0; i < slides.length; i++) {
+       slides[i].style.display = "none";  
+    }
+    slideIndex++;
+    if (slideIndex> slides.length) {slideIndex = 1}    
+    for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+    }
+    slides[slideIndex-1].style.display = "block";  
+    dots[slideIndex-1].className += " active";
+    setTimeout(showSlides, 5000); 
+}
+</script>
 
   </body>
 </html>
