--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://use.fontawesome.com/4e55fe0ee8.js"></script>
   <head>
   </head>
@@ -7,24 +8,19 @@
     body {
         background-color: rgb(235,245,251);
     }
-    h1 {
-        color: rgb(33,97,140);
-        font-family: sans-serif;
-        font-size: 40px;
-    }
     b { color: rgb(21,7,96);
         font-family: sans-serif;
-        font-size:30px;
+        font-size:28px;
         }
     p {
         color: rgb(21,7,96);
         font-family: sans-serif;
-        font-size:28px;
+        font-size:24px;
     }
     p2 {
         color: rgb(21,7,96);
         font-family: sans-serif;
-        font-size:40px;
+        font-size:36px;
     }
     p1 {
       color: rgb(33,97,140);
@@ -71,19 +67,16 @@
 </head>
 <body>
 
-
-
-
  <div class="slideshow-container">
  <div class="absolute"> <img src=" http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/r22U07d7gqbJZ5PlowSVfQT1kkDL0sG1PSvIvHV8mYo!/b/dOQAAAAAAAAA&ek=1&kp=1&pt=0&bo=vQO.A70DvgMDByI!&tm=1481652000&sce=60-2-2&rf=viewer_4"style="width:80%;">
   <p1> Wenqian Zhao</p1>
-  <p1 style="padding-left:0.5em">
-   <a href="https://www.facebook.com/Wenqianzhao"><i class="fa fa-facebook-official" style="color: rgb(33,97,140); font-size: 30px;" ></i></a> 
-  <a href="mailto:wenqianz98@gmail.com?Subject=Hello"><i class="fa fa-envelope" style="color: rgb(33,97,140); font-size:30px;"></i></a> 
-   <a href="https://github.com/wenqianz"><i class="fa fa-github" style="color: rgb(33,97,140); font-size: 30px;"></i></a> 
-   <a href="https://www.instagram.com/wenqian_8/"><i class="fa fa-instagram" style="color: rgb(33,97,140); font-size: 30px;"></i></a> 
-   <a href="https://www.snapchat.com/add/wenqianz"><i class="fa fa-snapchat" style="color: rgb(33,97,140); font-size: 30px;"></i></a> 
-   <a href="weixin://dl/chat?{wenqianz3407}"><i class="fa fa-wechat" style="color: rgb(33,97,140); font-size: 30px;"></i></a> </p1>
+  <br/>
+   &nbsp; <a href="https://www.facebook.com/Wenqianzhao"><i class="fa fa-facebook-official" style="color: rgb(33,97,140); font-size: 25px;" ></i></a>  &nbsp; • &nbsp;
+  <a href="mailto:wenqianz98@gmail.com?Subject=Hello"><i class="fa fa-envelope" style="color: rgb(33,97,140); font-size:25px;"></i></a> &nbsp;  • &nbsp;
+   <a href="https://github.com/wenqianz"><i class="fa fa-github" style="color: rgb(33,97,140); font-size: 25px;"></i></a>  &nbsp; • &nbsp;
+   <a href="https://www.instagram.com/wenqian_8/"><i class="fa fa-instagram" style="color: rgb(33,97,140); font-size: 25px;"></i></a>  &nbsp; • &nbsp;
+   <a href="https://www.snapchat.com/add/wenqianz"><i class="fa fa-snapchat" style="color: rgb(33,97,140); font-size: 25px;"></i></a>  &nbsp; • &nbsp;
+   <a href="weixin://dl/chat?{wenqianz3407}"><i class="fa fa-wechat" style="color: rgb(33,97,140); font-size: 25px;"></i></a> 
    <p> &nbsp; </p>
    <p><b style="font-size: 60;"> About me: </b></p>
    <p style = "color: rgb(33,97,140); font-size:30;">Religion: 
@@ -103,9 +96,9 @@
    <p style="padding-left:1em"> MTH241</p></p>
    </div>
    
-	<div class="slideshow-container"style="margin-left:390px; margin-top:200px; width:800px;height:760px; background:#fff;">
+	<div class="slideshow-container"style="margin-left:450px; margin-top:200px; width:800px;height:760px; background:#fff;">
     
-   	<div class="mySlides fade" style = "width:800px;"><img src ="https://scontent.xx.fbcdn.net/v/t31.0-8/15326030_1839770772929909_1467490782335912770_o.jpg?oh=3e6c2c1216005c00b186a4bba0dad300&oe=58F0C88A" style="width:800px"> 
+   	<div class="mySlides fade" style = "width:800px;div{width:360px;}"><img src ="https://scontent.xx.fbcdn.net/v/t31.0-8/15326030_1839770772929909_1467490782335912770_o.jpg?oh=3e6c2c1216005c00b186a4bba0dad300&oe=58F0C88A" style="width:800px"> 
   </div>
   
    <div class="mySlides fade" style = "width:800px;"><img src ="https://scontent-lga3-1.xx.fbcdn.net/v/t31.0-8/15391475_1839772842929702_2275733727368066275_o.jpg?oh=58dc8e5f9055180c4f8487fe79793060&oe=58E57823" style="width:800px">
@@ -118,25 +111,15 @@
   <span class="dot"></span> 
   <span class="dot"></span> 
   <span class="dot"></span> 
-   <p><b style="text-align:center">  December 9, 2016 - Baptism </b>
-   <p><b style="text-align:center">  Location: </b>Amherst Baptist Church</p>
-   <p style="text-align:center">A new beginning!!</p>
-   
+  </div>
+   <p><b  style="padding-left:7em">  December 9, 2016 - Baptism </b>
+   <p><b  style="padding-left:7em">  Location: </b>Amherst Baptist Church</p>
+   <p  style="padding-left:12em">A new beginning!!</p>  
 </div>
-</div>
-
-   <div class="relative;slideshow-container"style="margin-left:390px; margin-top:80px; width:800px;background:#fff;height:750px;"><img src ="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/14322589_307861459578526_1226600109812777511_n.jpg?oh=26eab155e454e5805c4472025e8e1680&oe=58FB9D2F" style="width:800px"> 
-   <p><b style="padding-left:5em"> September 9 - 11, 2016 - Camping </b>
-   <p><b style="padding-left:5em"> Location: </b>Christian Lighthouse Camp</p>
-        <p style="padding-left:10em">The Entrance!</p></div> 
-
-   </div>
-   
-    
-  
   <script>
 var slideIndex = 0;
 showSlides();
+
 
 function showSlides() {
     var i;
