--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
     }
     b { color: rgb(21,7,96);
         font-family: sans-serif;
-        font-size:28px;
+        max-font-size:20px;
         }
     p {
         color: rgb(21,7,96);
         font-family: sans-serif;
-        font-size:24px;
+        font-size:18px;
     }
     p2 {
         color: rgb(21,7,96);
         font-family: sans-serif;
-        font-size:36px;
+        max-font-size:32px;
     }
     p1 {
       color: rgb(33,97,140);
         font-family: sans-serif;
-        font-size:50px;
+        font-size:30px;
         }
     div.absolute {
     position: absolute;
     top: 40px;
-    left: 40px;
-    width: 330px;
-    height: 100px;
+    left: 30px;
+    max-width: 230px;
+    max-height: 100px;
 }
 	.dot {
   height: 13px;
@@ -68,54 +68,58 @@
 <body>
 
  <div class="slideshow-container">
- <div class="absolute"> <img src=" http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/r22U07d7gqbJZ5PlowSVfQT1kkDL0sG1PSvIvHV8mYo!/b/dOQAAAAAAAAA&ek=1&kp=1&pt=0&bo=vQO.A70DvgMDByI!&tm=1481652000&sce=60-2-2&rf=viewer_4"style="width:80%;">
+ <div class="absolute" style="max-width:200px;"> <img src=" http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/r22U07d7gqbJZ5PlowSVfQT1kkDL0sG1PSvIvHV8mYo!/b/dOQAAAAAAAAA&ek=1&kp=1&pt=0&bo=vQO.A70DvgMDByI!&tm=1481652000&sce=60-2-2&rf=viewer_4"  style="max-width:100%;">
   <p1> Wenqian Zhao</p1>
   <br/>
-   &nbsp; <a href="https://www.facebook.com/Wenqianzhao"><i class="fa fa-facebook-official" style="color: rgb(33,97,140); font-size: 25px;" ></i></a>  &nbsp; • &nbsp;
-  <a href="mailto:wenqianz98@gmail.com?Subject=Hello"><i class="fa fa-envelope" style="color: rgb(33,97,140); font-size:25px;"></i></a> &nbsp;  • &nbsp;
-   <a href="https://github.com/wenqianz"><i class="fa fa-github" style="color: rgb(33,97,140); font-size: 25px;"></i></a>  &nbsp; • &nbsp;
-   <a href="https://www.instagram.com/wenqian_8/"><i class="fa fa-instagram" style="color: rgb(33,97,140); font-size: 25px;"></i></a>  &nbsp; • &nbsp;
-   <a href="https://www.snapchat.com/add/wenqianz"><i class="fa fa-snapchat" style="color: rgb(33,97,140); font-size: 25px;"></i></a>  &nbsp; • &nbsp;
-   <a href="weixin://dl/chat?{wenqianz3407}"><i class="fa fa-wechat" style="color: rgb(33,97,140); font-size: 25px;"></i></a> 
+   <a href="https://www.facebook.com/Wenqianzhao"><i class="fa fa-facebook-official" style="color: rgb(33,97,140); max-font-size: 20px;" ></i></a>  &nbsp; • &nbsp;
+  <a href="mailto:wenqianz98@gmail.com?Subject=Hello"><i class="fa fa-envelope" style="color: rgb(33,97,140); max-font-size:20px;"></i></a> &nbsp;  • &nbsp;
+   <a href="https://github.com/wenqianz"><i class="fa fa-github" style="color: rgb(33,97,140); font-size: 20px;"></i></a>  &nbsp; • &nbsp;
+   <a href="https://www.instagram.com/wenqian_8/"><i class="fa fa-instagram" style="color: rgb(33,97,140); max-font-size: 20px;"></i></a>  &nbsp; • &nbsp;
+   <a href="https://www.snapchat.com/add/wenqianz"><i class="fa fa-snapchat" style="color: rgb(33,97,140); max-font-size: 20px;"></i></a>  &nbsp; • &nbsp;
+   <a href="weixin://dl/chat?{wenqianz3407}"><i class="fa fa-wechat" style="color: rgb(33,97,140); max-font-size: 20px;"></i></a> 
    <p> &nbsp; </p>
-   <p><b style="font-size: 60;"> About me: </b></p>
-   <p style = "color: rgb(33,97,140); font-size:30;">Religion: 
+   <p><b> About me: </b></p>
+   <p style = "color: rgb(33,97,140); ">Religion: 
    <p style="padding-left:1em"> Christianity</p></p>
    <p style = "color: rgb(33,97,140); font-size:30;">Birthday: 
    <p style="padding-left:1em"> July 6, 1998</p></p>
-   <p style = "color: rgb(33,97,140); font-size:30;">Zodiac: 
+   <p style = "color: rgb(33,97,140);">Zodiac: 
    <p style="padding-left:1em"> Cancer</p>
-   <p style = "color: rgb(33,97,140); font-size:30;">Pet: 
+   <p style = "color: rgb(33,97,140);">Pet: 
    <p style="padding-left:1em"> Milk Snake</p>
-   <p style = "color: rgb(33,97,140); font-size:30;">College: 
+   <p style = "color: rgb(33,97,140);">College: 
    <p style="padding-left:1em"> University At Buffalo</p>
-   <p style = "color: rgb(33,97,140); font-size:30;">Courses taking: 
+   <p style = "color: rgb(33,97,140);">Courses taking: 
    <p style="padding-left:1em"> CSE115</p>
    <p style="padding-left:1em"> CSE199</p>
    <p style="padding-left:1em"> ARC121</p>
    <p style="padding-left:1em"> MTH241</p></p>
    </div>
    
-	<div class="slideshow-container"style="margin-left:450px; margin-top:200px; width:800px;height:760px; background:#fff;">
+	<div class="slideshow-container"style="margin-left:300px; margin-top:200px; max-width:550px;max-height:760px; background:#fff;">
     
-   	<div class="mySlides fade" style = "width:800px;div{width:360px;}"><img src ="https://scontent.xx.fbcdn.net/v/t31.0-8/15326030_1839770772929909_1467490782335912770_o.jpg?oh=3e6c2c1216005c00b186a4bba0dad300&oe=58F0C88A" style="width:800px"> 
+   		<div class="mySlides fade"><img src ="https://scontent.xx.fbcdn.net/v/t31.0-8/15326030_1839770772929909_1467490782335912770_o.jpg?oh=3e6c2c1216005c00b186a4bba0dad300&oe=58F0C88A" style="width:100%"> 
   </div>
   
-   <div class="mySlides fade" style = "width:800px;"><img src ="https://scontent-lga3-1.xx.fbcdn.net/v/t31.0-8/15391475_1839772842929702_2275733727368066275_o.jpg?oh=58dc8e5f9055180c4f8487fe79793060&oe=58E57823" style="width:800px">
+  	 <div class="mySlides fade"><img src ="https://scontent-lga3-1.xx.fbcdn.net/v/t31.0-8/15391475_1839772842929702_2275733727368066275_o.jpg?oh=58dc8e5f9055180c4f8487fe79793060&oe=58E57823" style="width:100%">
    </div> 
    
-   <div class="mySlides fade" style = "width:800px;"><img src ="http://a3.qpic.cn/psb?/V13GbYmt2DUsbb/EhAksm0MpKZvC7*ivmhjX4iLUmZoVg8TWyGl52lsNZA!/b/dB8BAAAAAAAA&bo=wgaABMIGgAQFByQ!&rf=viewer_4" style="width:800px"> 
+ 	  <div class="mySlides fade"><img src ="http://a3.qpic.cn/psb?/V13GbYmt2DUsbb/EhAksm0MpKZvC7*ivmhjX4iLUmZoVg8TWyGl52lsNZA!/b/dB8BAAAAAAAA&bo=wgaABMIGgAQFByQ!&rf=viewer_4" style="width:100%"> 
    </div> 
       <br>
-	<div style="text-align:center">
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-  </div>
-   <p><b  style="padding-left:7em">  December 9, 2016 - Baptism </b>
-   <p><b  style="padding-left:7em">  Location: </b>Amherst Baptist Church</p>
-   <p  style="padding-left:12em">A new beginning!!</p>  
+		<div style="text-align:center">
+ 		 <span class="dot"></span> 
+ 		 <span class="dot"></span> 
+  		<span class="dot"></span> 
+ 		 
+   <p><b>  December 9, 2016 - Baptism </b>
+   <p><b>  Location: </b>Amherst Baptist Church</p>
+   <p>A new beginning!!</p>  
+   </div>
 </div>
+
+
+  
   <script>
 var slideIndex = 0;
 showSlides();
