--- a/index.html
+++ b/index.html
@@ -17,26 +17,15 @@
         font-family: sans-serif;
         font-size:18px;
     }
-    p2 {
-        color: rgb(21,7,96);
-        font-family: sans-serif;
-        max-font-size:32px;
-    }
     p1 {
       color: rgb(33,97,140);
         font-family: sans-serif;
-        font-size:30px;
+        font-size:40px;
         }
-    div.absolute {
-    position: absolute;
-    top: 40px;
-    left: 30px;
-    max-width: 230px;
-    max-height: 100px;
-}
+   
 	.dot {
-  height: 13px;
-  width: 13px;
+  height: 8px;
+  width: 8px;
   margin: 0 2px;
   background-color: #bbb;
   border-radius: 50%;
@@ -67,22 +56,15 @@
 </head>
 <body>
 
- <div class="slideshow-container">
- <div class="absolute" style="max-width:200px;"> <img src=" http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/r22U07d7gqbJZ5PlowSVfQT1kkDL0sG1PSvIvHV8mYo!/b/dOQAAAAAAAAA&ek=1&kp=1&pt=0&bo=vQO.A70DvgMDByI!&tm=1481652000&sce=60-2-2&rf=viewer_4"  style="max-width:100%;">
-  <p1> Wenqian Zhao</p1>
-  <br/>
-   <a href="https://www.facebook.com/Wenqianzhao"><i class="fa fa-facebook-official" style="color: rgb(33,97,140); max-font-size: 20px;" ></i></a>  &nbsp; • &nbsp;
-  <a href="mailto:wenqianz98@gmail.com?Subject=Hello"><i class="fa fa-envelope" style="color: rgb(33,97,140); max-font-size:20px;"></i></a> &nbsp;  • &nbsp;
-   <a href="https://github.com/wenqianz"><i class="fa fa-github" style="color: rgb(33,97,140); font-size: 20px;"></i></a>  &nbsp; • &nbsp;
-   <a href="https://www.instagram.com/wenqian_8/"><i class="fa fa-instagram" style="color: rgb(33,97,140); max-font-size: 20px;"></i></a>  &nbsp; • &nbsp;
-   <a href="https://www.snapchat.com/add/wenqianz"><i class="fa fa-snapchat" style="color: rgb(33,97,140); max-font-size: 20px;"></i></a>  &nbsp; • &nbsp;
-   <a href="weixin://dl/chat?{wenqianz3407}"><i class="fa fa-wechat" style="color: rgb(33,97,140); max-font-size: 20px;"></i></a> 
-   <p> &nbsp; </p>
+
+ <div class="absolute" style=" position: absolute; top: 30px; left: 30px; max-width:180px"> 
+ <div ><img src=" http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/r22U07d7gqbJZ5PlowSVfQT1kkDL0sG1PSvIvHV8mYo!/b/dOQAAAAAAAAA&ek=1&kp=1&pt=0&bo=vQO.A70DvgMDByI!&tm=1481652000&sce=60-2-2&rf=viewer_4"  style="max-width:100%;"></div>
+  
    <p><b> About me: </b></p>
    <p style = "color: rgb(33,97,140); ">Religion: 
-   <p style="padding-left:1em"> Christianity</p></p>
+   <p style="padding-left:1em"> Christianity</p>
    <p style = "color: rgb(33,97,140); font-size:30;">Birthday: 
-   <p style="padding-left:1em"> July 6, 1998</p></p>
+   <p style="padding-left:1em"> July 6, 1998</p>
    <p style = "color: rgb(33,97,140);">Zodiac: 
    <p style="padding-left:1em"> Cancer</p>
    <p style = "color: rgb(33,97,140);">Pet: 
@@ -93,10 +75,19 @@
    <p style="padding-left:1em"> CSE115</p>
    <p style="padding-left:1em"> CSE199</p>
    <p style="padding-left:1em"> ARC121</p>
-   <p style="padding-left:1em"> MTH241</p></p>
+   <p style="padding-left:1em"> MTH241</p>
    </div>
-   
-	<div class="slideshow-container"style="margin-left:300px; margin-top:200px; max-width:550px;max-height:760px; background:#fff;">
+   <div class="absolute" style="position:absolute; top:80px; left: 250px; max-width:400px">
+   <p1> Wenqian Zhao</p1>
+  <br/>
+   <a href="https://www.facebook.com/Wenqianzhao"><i class="fa fa-facebook-official" style="color: rgb(33,97,140); max-font-size: 20px;" ></i></a>  &nbsp; • &nbsp;
+  <a href="mailto:wenqianz98@gmail.com?Subject=Hello"><i class="fa fa-envelope" style="color: rgb(33,97,140); max-font-size:20px;"></i></a> &nbsp;  • &nbsp;
+   <a href="https://github.com/wenqianz"><i class="fa fa-github" style="color: rgb(33,97,140); font-size: 20px;"></i></a>  &nbsp; • &nbsp;
+   <a href="https://www.instagram.com/wenqian_8/"><i class="fa fa-instagram" style="color: rgb(33,97,140); max-font-size: 20px;"></i></a>  &nbsp; • &nbsp;
+   <a href="https://www.snapchat.com/add/wenqianz"><i class="fa fa-snapchat" style="color: rgb(33,97,140); max-font-size: 20px;"></i></a>  &nbsp; • &nbsp;
+   <a href="weixin://dl/chat?{wenqianz3407}"><i class="fa fa-wechat" style="color: rgb(33,97,140); max-font-size: 20px;"></i></a> 
+   </div>
+	<div class="slideshow-container"style="margin-left:250px; margin-top:200px; max-width:300px;max-height:760px; background:#fff;">
     
    		<div class="mySlides fade"><img src ="https://scontent.xx.fbcdn.net/v/t31.0-8/15326030_1839770772929909_1467490782335912770_o.jpg?oh=3e6c2c1216005c00b186a4bba0dad300&oe=58F0C88A" style="width:100%"> 
   </div>
