--- a/index.html
+++ b/index.html
@@ -77,15 +77,14 @@
    <p style="padding-left:1em"> ARC121</p>
    <p style="padding-left:1em"> MTH241</p>
    </div>
-   <div class="absolute" style="position:absolute; top:80px; left: 180px; max-width:380px">
+   <div class="absolute" style="position:absolute; top:80px; left: 160px; max-width:380px">
    <p1> Wenqian Zhao</p1>
   <br/>
-   <a href="https://www.facebook.com/Wenqianzhao"><i class="fa fa-facebook-official" style="color: rgb(33,97,140); max-font-size: 20px;" ></i></a>  &nbsp; • &nbsp;
+   &nbsp;&nbsp;&nbsp;<a href="https://www.facebook.com/Wenqianzhao"><i class="fa fa-facebook-official" style="color: rgb(33,97,140); max-font-size: 20px;" ></i></a>  &nbsp; • &nbsp;
   <a href="mailto:wenqianz98@gmail.com?Subject=Hello"><i class="fa fa-envelope" style="color: rgb(33,97,140); max-font-size:20px;"></i></a> &nbsp;  • &nbsp;
    <a href="https://github.com/wenqianz"><i class="fa fa-github" style="color: rgb(33,97,140); font-size: 20px;"></i></a>  &nbsp; • &nbsp;
    <a href="https://www.instagram.com/wenqian_8/"><i class="fa fa-instagram" style="color: rgb(33,97,140); max-font-size: 20px;"></i></a>  &nbsp; • &nbsp;
-   <a href="https://www.snapchat.com/add/wenqianz"><i class="fa fa-snapchat" style="color: rgb(33,97,140); max-font-size: 20px;"></i></a>  &nbsp; • &nbsp;
-   <a href="weixin://dl/chat?{wenqianz3407}"><i class="fa fa-wechat" style="color: rgb(33,97,140); max-font-size: 20px;"></i></a> 
+   <a href="https://www.snapchat.com/add/wenqianz"><i class="fa fa-snapchat" style="color: rgb(33,97,140); max-font-size: 20px;"></i></a> 
    </div>
    
 	<div class="slideshow-container"style="margin-left:200px; margin-top:180px; max-width:300px;max-height:760px; background:#fff;">
