--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <head>
   </head>
   <style>
-    body {
-        background-color: rgb(235,245,251);
-    }
+    body { background-color: rgb(235,245,251); }
     b { color: rgb(21,7,96);
         font-family: sans-serif;
         max-font-size:20px;
@@ -38,17 +36,14 @@
   animation-name: fade;
   animation-duration: 1.5s;
 }
-
 @-webkit-keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
 }
-
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
 }
-
 @media only screen and (max-width: 300px) {
   .text {font-size: 11px}
 }
@@ -56,8 +51,7 @@
 </head>
 <body>
 
-
- <div class="absolute" style=" position: absolute; top: 20px; left: 20px; max-width:120px"> 
+ <div class="absolute" style=" position: absolute; top: 20px; left: 20px; max-width:100px"> 
  <div ><img src=" http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/r22U07d7gqbJZ5PlowSVfQT1kkDL0sG1PSvIvHV8mYo!/b/dOQAAAAAAAAA&ek=1&kp=1&pt=0&bo=vQO.A70DvgMDByI!&tm=1481652000&sce=60-2-2&rf=viewer_4"  style="max-width:100%;"></div>
   
    <p><b> About me: </b></p>
@@ -67,15 +61,8 @@
    <p style="padding-left:1em"> July 6, 1998</p>
    <p style = "color: rgb(33,97,140);">Zodiac: 
    <p style="padding-left:1em"> Cancer</p>
-   <p style = "color: rgb(33,97,140);">Pet: 
-   <p style="padding-left:1em"> Milk Snake</p>
    <p style = "color: rgb(33,97,140);">College: 
    <p style="padding-left:1em"> University At Buffalo</p>
-   <p style = "color: rgb(33,97,140);">Courses taking: 
-   <p style="padding-left:1em"> CSE115</p>
-   <p style="padding-left:1em"> CSE199</p>
-   <p style="padding-left:1em"> ARC121</p>
-   <p style="padding-left:1em"> MTH241</p>
    </div>
    <div class="absolute" style="position:absolute; top:80px; left: 160px; max-width:380px">
    <p1> Wenqian Zhao</p1>
@@ -87,9 +74,9 @@
    <a href="https://www.snapchat.com/add/wenqianz"><i class="fa fa-snapchat" style="color: rgb(33,97,140); max-font-size: 20px;"></i></a> 
    </div>
    
-	<div class="slideshow-container"style="margin-left:200px; margin-top:180px; max-width:300px;max-height:760px; background:#fff;">
+	<div class="slideshow-container"style="margin-left:200px; margin-top:180px; max-width:900px;max-height:860px; background:#fff;">
     
-   		<div class="mySlides fade"><img src ="https://scontent.xx.fbcdn.net/v/t31.0-8/15326030_1839770772929909_1467490782335912770_o.jpg?oh=3e6c2c1216005c00b186a4bba0dad300&oe=58F0C88A" style="width:100%"> 
+   		<div class="mySlides fade"><img src ="http://a3.qpic.cn/psb?/V13GbYmt2DUsbb/AFa4qsJWmWf1Q0O6uMgOHnOnUTLHN5pqK7S8cfVJRCs!/b/dB8BAAAAAAAA&bo=CAewBAgHsAQFByQ!&rf=viewer_4" style="width:100%"> 
   </div>
   
   	 <div class="mySlides fade"><img src ="https://scontent-lga3-1.xx.fbcdn.net/v/t31.0-8/15391475_1839772842929702_2275733727368066275_o.jpg?oh=58dc8e5f9055180c4f8487fe79793060&oe=58E57823" style="width:100%">
@@ -106,7 +93,18 @@
    <p><b>  December 9, 2016 - Baptism </b>
    <p><b>  Location: </b>Amherst Baptist Church</p>
    <p>A new beginning!!</p>  
-   </div>
+   </div> Photo credit to BingBing Zheng
+</div>
+
+<div class="Photo"style="margin-left:200px; margin-top:40px; max-width:900px; max-height:860px; background:#fff;">
+<p style="text-align:center"><b>  Septembere 9-11, 2016 - Camping </b>
+   <p style="text-align:center"><b>  Location: </b>Lighthouse Christian Camp</p>
+   <p style="text-align:center">The Entrance!</p>  
+	<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/S.FCKFjWt.TIOJcTzPThtnDbibB4xwEqZ6bkwkGkHPE!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFACM!&rf=viewer_4" style="max-width:100%"> 
+	<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/3OH7m4J9e9p4AsffM3FjTss0U0Xyv83czQgKECwLpJc!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFByQ!&rf=viewer_4" style="max-width:100%"> 
+
+<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/*7X64vI6bvn6hieWqXYwNUkRyNUSYsfZ17IwKxpVmKU!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFACM!&rf=viewer_4" style="max-width:100%"> 
+    Photo credit to BingBing Zheng
 </div>
 
 
@@ -114,8 +112,6 @@
   <script>
 var slideIndex = 0;
 showSlides();
-
-
 function showSlides() {
     var i;
     var slides = document.getElementsByClassName("mySlides");
