--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     p1 {
       color: rgb(33,97,140);
         font-family: sans-serif;
-        font-size:34px;
+        font-size:30px;
         }
    
 	.dot {
@@ -64,17 +64,17 @@
    <p style = "color: rgb(33,97,140);">College: 
    <p style="padding-left:1em"> University At Buffalo</p>
    </div>
-   <div class="absolute" style="position:absolute; top:80px; left: 160px; max-width:380px">
+   <div class="absolute" style="position:absolute; top:60px; left: 160px; max-width:380px">
    <p1> Wenqian Zhao</p1>
   <br/>
-   &nbsp;&nbsp;&nbsp;<a href="https://www.facebook.com/Wenqianzhao"><i class="fa fa-facebook-official" style="color: rgb(33,97,140); max-font-size: 20px;" ></i></a>  &nbsp; • &nbsp;
+   &nbsp;<a href="https://www.facebook.com/Wenqianzhao"><i class="fa fa-facebook-official" style="color: rgb(33,97,140); max-font-size: 20px;" ></i></a>  &nbsp; • &nbsp;
   <a href="mailto:wenqianz98@gmail.com?Subject=Hello"><i class="fa fa-envelope" style="color: rgb(33,97,140); max-font-size:20px;"></i></a> &nbsp;  • &nbsp;
    <a href="https://github.com/wenqianz"><i class="fa fa-github" style="color: rgb(33,97,140); font-size: 20px;"></i></a>  &nbsp; • &nbsp;
    <a href="https://www.instagram.com/wenqian_8/"><i class="fa fa-instagram" style="color: rgb(33,97,140); max-font-size: 20px;"></i></a>  &nbsp; • &nbsp;
    <a href="https://www.snapchat.com/add/wenqianz"><i class="fa fa-snapchat" style="color: rgb(33,97,140); max-font-size: 20px;"></i></a> 
    </div>
    
-	<div class="slideshow-container"style="margin-left:200px; margin-top:180px; max-width:900px;max-height:860px; background:#fff;">
+	<div class="slideshow-container"style="margin-left:180px; margin-top:200px; max-width:1000px;max-height:860px; background:#fff;">
     
    		<div class="mySlides fade"><img src ="http://a3.qpic.cn/psb?/V13GbYmt2DUsbb/AFa4qsJWmWf1Q0O6uMgOHnOnUTLHN5pqK7S8cfVJRCs!/b/dB8BAAAAAAAA&bo=CAewBAgHsAQFByQ!&rf=viewer_4" style="width:100%"> 
   </div>
@@ -96,14 +96,15 @@
    </div> Photo credit to BingBing Zheng
 </div>
 
-<div class="Photo"style="margin-left:200px; margin-top:40px; max-width:900px; max-height:860px; background:#fff;">
+<div class="Photo"style="margin-left:180px; margin-top:40px; max-width:1000px; max-height:860px; background:#fff;">
+
 <p style="text-align:center"><b>  Septembere 9-11, 2016 - Camping </b>
    <p style="text-align:center"><b>  Location: </b>Lighthouse Christian Camp</p>
    <p style="text-align:center">The Entrance!</p>  
-	<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/S.FCKFjWt.TIOJcTzPThtnDbibB4xwEqZ6bkwkGkHPE!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFACM!&rf=viewer_4" style="max-width:100%"> 
-	<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/3OH7m4J9e9p4AsffM3FjTss0U0Xyv83czQgKECwLpJc!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFByQ!&rf=viewer_4" style="max-width:100%"> 
+	<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/S.FCKFjWt.TIOJcTzPThtnDbibB4xwEqZ6bkwkGkHPE!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFACM!&rf=viewer_4" style="max-width:33%"> 
+	<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/3OH7m4J9e9p4AsffM3FjTss0U0Xyv83czQgKECwLpJc!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFByQ!&rf=viewer_4" style="max-width:33%"> 
 
-<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/*7X64vI6bvn6hieWqXYwNUkRyNUSYsfZ17IwKxpVmKU!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFACM!&rf=viewer_4" style="max-width:100%"> 
+<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/*7X64vI6bvn6hieWqXYwNUkRyNUSYsfZ17IwKxpVmKU!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFACM!&rf=viewer_4" style="max-width:33%"> 
     Photo credit to BingBing Zheng
 </div>
 
