--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
    <a href="https://www.snapchat.com/add/wenqianz"><i class="fa fa-snapchat" style="color: rgb(33,97,140); max-font-size: 20px;"></i></a> 
    </div>
    
-	<div class="slideshow-container"style="margin-left:180px; margin-top:200px; max-width:1000px;max-height:860px; background:#fff;">
+	<div class="slideshow-container"style="margin-left:180px; margin-top:160px; max-width:1000px;max-height:860px; background:#fff;">
     
    		<div class="mySlides fade"><img src ="http://a3.qpic.cn/psb?/V13GbYmt2DUsbb/AFa4qsJWmWf1Q0O6uMgOHnOnUTLHN5pqK7S8cfVJRCs!/b/dB8BAAAAAAAA&bo=CAewBAgHsAQFByQ!&rf=viewer_4" style="width:100%"> 
   </div>
@@ -101,14 +101,11 @@
 <p style="text-align:center"><b>  Septembere 9-11, 2016 - Camping </b>
    <p style="text-align:center"><b>  Location: </b>Lighthouse Christian Camp</p>
    <p style="text-align:center">The Entrance!</p>  
-	<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/S.FCKFjWt.TIOJcTzPThtnDbibB4xwEqZ6bkwkGkHPE!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFACM!&rf=viewer_4" style="max-width:33%"> 
-	<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/3OH7m4J9e9p4AsffM3FjTss0U0Xyv83czQgKECwLpJc!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFByQ!&rf=viewer_4" style="max-width:33%"> 
-
-<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/*7X64vI6bvn6hieWqXYwNUkRyNUSYsfZ17IwKxpVmKU!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFACM!&rf=viewer_4" style="max-width:33%"> 
+	&nbsp;<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/S.FCKFjWt.TIOJcTzPThtnDbibB4xwEqZ6bkwkGkHPE!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFACM!&rf=viewer_4" style="max-width:32.3%"> 
+	<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/3OH7m4J9e9p4AsffM3FjTss0U0Xyv83czQgKECwLpJc!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFByQ!&rf=viewer_4" style="max-width:32.3%"> 
+<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/*7X64vI6bvn6hieWqXYwNUkRyNUSYsfZ17IwKxpVmKU!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFACM!&rf=viewer_4" style="max-width:32.3%"> 
     Photo credit to BingBing Zheng
 </div>
-
-
   
   <script>
 var slideIndex = 0;
