--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
    
 	<div class="slideshow-container"style="margin-left:180px; margin-top:160px; max-width:1000px;max-height:860px; background:#fff;">
     
-   		<div class="mySlides fade"><img src ="http://a3.qpic.cn/psb?/V13GbYmt2DUsbb/AFa4qsJWmWf1Q0O6uMgOHnOnUTLHN5pqK7S8cfVJRCs!/b/dB8BAAAAAAAA&bo=CAewBAgHsAQFByQ!&rf=viewer_4" style="width:100%"> 
+   		<div class="mySlides fade"><img alt="Photo credit to BingBing Zheng" src ="http://a3.qpic.cn/psb?/V13GbYmt2DUsbb/AFa4qsJWmWf1Q0O6uMgOHnOnUTLHN5pqK7S8cfVJRCs!/b/dB8BAAAAAAAA&bo=CAewBAgHsAQFByQ!&rf=viewer_4" style="width:100%"> 
   </div>
   
-  	 <div class="mySlides fade"><img src ="https://scontent-lga3-1.xx.fbcdn.net/v/t31.0-8/15391475_1839772842929702_2275733727368066275_o.jpg?oh=58dc8e5f9055180c4f8487fe79793060&oe=58E57823" style="width:100%">
+  	 <div class="mySlides fade"><img alt="Photo credit to BingBing Zheng" src ="https://scontent-lga3-1.xx.fbcdn.net/v/t31.0-8/15391475_1839772842929702_2275733727368066275_o.jpg?oh=58dc8e5f9055180c4f8487fe79793060&oe=58E57823" style="width:100%">
    </div> 
    
- 	  <div class="mySlides fade"><img src ="http://a3.qpic.cn/psb?/V13GbYmt2DUsbb/EhAksm0MpKZvC7*ivmhjX4iLUmZoVg8TWyGl52lsNZA!/b/dB8BAAAAAAAA&bo=wgaABMIGgAQFByQ!&rf=viewer_4" style="width:100%"> 
+ 	  <div class="mySlides fade"><img alt="Photo credit to BingBing Zheng" src ="http://a3.qpic.cn/psb?/V13GbYmt2DUsbb/EhAksm0MpKZvC7*ivmhjX4iLUmZoVg8TWyGl52lsNZA!/b/dB8BAAAAAAAA&bo=wgaABMIGgAQFByQ!&rf=viewer_4" style="width:100%"> 
    </div> 
       <br>
 		<div style="text-align:center">
@@ -93,19 +93,20 @@
    <p><b>  December 9, 2016 - Baptism </b>
    <p><b>  Location: </b>Amherst Baptist Church</p>
    <p>A new beginning!!</p>  
-   </div> Photo credit to BingBing Zheng
+   </div> 
 </div>
 
-<div class="Photo"style="margin-left:180px; margin-top:40px; max-width:1000px; max-height:860px; background:#fff;">
+<div class="Photo"style="margin-left:120px; margin-top:40px; max-width:1100px; max-height:860px; background:#fff;">
 
 <p style="text-align:center"><b>  Septembere 9-11, 2016 - Camping </b>
    <p style="text-align:center"><b>  Location: </b>Lighthouse Christian Camp</p>
    <p style="text-align:center">The Entrance!</p>  
-	&nbsp;<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/S.FCKFjWt.TIOJcTzPThtnDbibB4xwEqZ6bkwkGkHPE!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFACM!&rf=viewer_4" style="max-width:32.3%"> 
-	<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/3OH7m4J9e9p4AsffM3FjTss0U0Xyv83czQgKECwLpJc!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFByQ!&rf=viewer_4" style="max-width:32.3%"> 
-<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/*7X64vI6bvn6hieWqXYwNUkRyNUSYsfZ17IwKxpVmKU!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFACM!&rf=viewer_4" style="max-width:32.3%"> 
-    Photo credit to BingBing Zheng
+	<img alt="Photo credit to BingBing Zheng" src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/S.FCKFjWt.TIOJcTzPThtnDbibB4xwEqZ6bkwkGkHPE!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFACM!&rf=viewer_4" style="max-width:32.3%;"> 
+	<img alt="Photo credit to BingBing Zheng" src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/3OH7m4J9e9p4AsffM3FjTss0U0Xyv83czQgKECwLpJc!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFByQ!&rf=viewer_4" style="max-width:32.3%;"> 
+<img alt="Photo credit to BingBing Zheng" src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/*7X64vI6bvn6hieWqXYwNUkRyNUSYsfZ17IwKxpVmKU!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFACM!&rf=viewer_4" style="max-width:32.3%;"> 
+    
 </div>
+
   
   <script>
 var slideIndex = 0;
