--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     p1 {
       color: rgb(33,97,140);
         font-family: sans-serif;
-        font-size:30px;
+        font-size:34px;
         }
 	.dot {
   height: 8px;
@@ -51,17 +51,17 @@
 </head>
 <body>
 
- <div class="absolute" style=" position: absolute; top: 20px; left: 20px; max-width:100px"> 
+ <div class="absolute" style=" position: absolute; top: 20px; left: 20px; max-width:110px"> 
  <div ><img src=" http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/r22U07d7gqbJZ5PlowSVfQT1kkDL0sG1PSvIvHV8mYo!/b/dOQAAAAAAAAA&ek=1&kp=1&pt=0&bo=vQO.A70DvgMDByI!&tm=1481652000&sce=60-2-2&rf=viewer_4"  style="max-width:100%;"></div>
   
-   <p><b> About me: </b></p>
-   <p style = "color: rgb(33,97,140);  ">Religion: 
+   <p><b style = "font-size:22px;"> About me: </b></p>
+   <p style = "color: rgb(33,97,140); font-size:20px; ">Religion: 
    <p style="padding-left:1em;"> Christianity</p>
-   <p style = "color: rgb(33,97,140); ">Birthday: 
+   <p style = "color: rgb(33,97,140);font-size:20px; ">Birthday: 
    <p style="padding-left:1em"> July 6, 1998</p>
-   <p style = "color: rgb(33,97,140);">Zodiac: 
+   <p style = "color: rgb(33,97,140);font-size:20px;">Zodiac: 
    <p style="padding-left:1em"> Cancer</p>
-   <p style = "color: rgb(33,97,140);">College: 
+   <p style = "color: rgb(33,97,140);font-size:20px;">College: 
    <p style="padding-left:1em"> University At Buffalo</p>
    </div>
    <div class="absolute" style="position:absolute; top:60px; left: 160px; max-width:380px">
@@ -99,7 +99,7 @@
 </div>
 <br/><br/>
  <p style="border-bottom: solid;
-    border-bottom-color: rgb(21,7,96); margin-left:100px;  max-width:1100px;"></p>
+    border-bottom-color: rgb(21,7,96); margin-left:40px;  max-width:1100px;"></p>
 
 
 <div class="Photo"style="margin-left:40px; margin-top:80px; max-width:1100px; max-height:860px; ">
@@ -115,7 +115,7 @@
 <br/>
 
  <p style="border-bottom: solid;
-    border-bottom-color: rgb(21,7,96); margin-left:100px;  max-width:1100px;"></p>
+    border-bottom-color: rgb(21,7,96); margin-left:40px;  max-width:1100px;"></p>
     <br/><br/><br/><br/>
     <p style="text-align:center;font-size:12px;">Photo credit to BingBing Zheng&nbsp;<a href="https://www.facebook.com/z2b0925"><i class="fa fa-facebook-official" style="color: rgb(33,97,140); max-font-size: 20px;" ></i></a> </p>
     
